tests/machine/x/cobol/pure_global_fold.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/pure_global_fold.cob:11: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/pure_global_fold.cob:12: error: 'FN_INC_RES' is not defined
/workspace/mochi/tests/machine/x/cobol/pure_global_fold.cob: in paragraph 'FN_INC':
/workspace/mochi/tests/machine/x/cobol/pure_global_fold.cob:16: error: syntax error, unexpected PROCEDURE
/workspace/mochi/tests/machine/x/cobol/pure_global_fold.cob:17: error: 'X' cannot be used here

