tests/machine/x/cobol/pure_global_fold.cob
*> Generated by Mochi compiler v0.10.26 on 2025-07-16T15:32:18Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. PURE-GLOBAL-FOLD.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 K PIC 9 VALUE 2.
       01 FN-INC-RES PIC 9 VALUE 0.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       PERFORM FN_INC USING 3
       DISPLAY FN_INC_RES
       STOP RUN.
       
       FN_INC.
           PROCEDURE DIVISION USING X.
               COMPUTE FN_INC_RES = X + K
               EXIT.
